add messages with function

--- a/index.html
+++ b/index.html
@@ -41,11 +41,18 @@
                 ></textarea>
               </div>
 
+              <div class="form-group">
+                <label for="tags">Tags</label>
+                <input type="text" class="form-control" name="tags" id="tags" />
+              </div>
+
               <button type="submit" class="btn btn-primary">Send</button>
             </form>
           </div>
         </div>
       </div>
+
+      <div class="row" id="messages"></div>
     </div>
 
     <script
@@ -58,5 +65,53 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      let addItem = (listElement) => {
+        return function (title, content, ...tags) {
+          let $message = document.createElement("div");
+          $message.classList.add("box");
+          $message.classList.add("col-12");
+
+          $message.innerHTML = `
+            <h3>${title}</h3>
+            <p>${content}</p>
+          `;
+
+          tags.map((item) => {
+            let $tag = document.createElement("span");
+            $tag.className = "badge badge-secondary";
+            $tag.innerHTML = item;
+
+            $message.append($tag);
+          });
+
+          listElement.prepend($message);
+        };
+      };
+
+      const messageForm = document.getElementById("message-form");
+      const messagesDiv = document.getElementById("messages");
+
+      let addMessage = addItem(messagesDiv);
+      // addMessage('Nina', 'Hi!', '#', '#', '#')
+
+      messageForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+
+        const _author = messageForm.querySelector("[name=author]").value;
+        const _message = messageForm.querySelector("[name=message]").value;
+
+        if (_author === '' || _message === '') {
+            alert('Заполнены не все поля!');
+            return;
+        }
+        
+        const _tagsInput = messageForm.querySelector("[name=tags]").value;
+        let tags = _tagsInput.split(" "); // array
+
+        addMessage(_author, _message, ...tags);
+      });
+    </script>
   </body>
 </html>
