--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         </div>
       </div>
 
-      <button id="start-filter" class="btn btn-danger">Spam Filter!</button>
+      <div class="app-actions">
+        <button id="start-filter" class="btn btn-danger">Spam Filter!</button>
+      </div>
 
       <div class="row" id="messages"></div>
     </div>
@@ -62,6 +64,7 @@
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
@@ -69,13 +72,22 @@
     ></script>
 
     <script>
-      let messages = [];
+      let messages = JSON.parse(localStorage.getItem("messages")) || [];
+
+      // функция форматирования даты в формат dd.mm.YYYY
+      let formatDate = (date) => {
+        let leadZero = (num) => (num < 10 ? "0" + num : String(num));
+
+        return `${leadZero(date.getDate())}.${leadZero(
+          date.getMonth() + 1
+        )}.${date.getFullYear()}`;
+      };
 
       //  замыкание для добавления элемента в список
       //  принимает HTMLElement, в который будет добавляться элемент
       let addItem = (listElement) => {
         // функция для добавления
-        return function (title, content, ...tags) {
+        return function (title, content, date, ...tags) {
           let $message = document.createElement("div");
           $message.classList.add("box");
           $message.classList.add("col-12");
@@ -83,6 +95,7 @@
           $message.innerHTML = `
             <h3>${title}</h3>
             <p>${content}</p>
+            <span class="message__date">${formatDate(date)}</span>
           `;
 
           tags.map((item) => {
@@ -98,12 +111,22 @@
       };
 
       // функция для создания объекта сообщения
-      const createMessage = (author, message, ...tags) => {
+      const createMessage = (author, message, date, ...tags) => {
         return {
           author,
           message,
+          date,
           tags,
         };
+      };
+
+      const renderMessages = (messages) => {
+        messagesDiv.innerHTML = "";
+
+        messages.map((item) => {
+          let { author, message: __message, date, tags } = item;
+          addMessage(author, __message, new Date(date), tags);
+        });
       };
 
       // добавление сообщения
@@ -111,6 +134,8 @@
       const messagesDiv = document.getElementById("messages");
 
       let addMessage = addItem(messagesDiv);
+
+      renderMessages(messages);
 
       messageForm.addEventListener("submit", (e) => {
         e.preventDefault();
@@ -126,10 +151,14 @@
         const _tagsInput = messageForm.querySelector("[name=tags]").value;
         let tags = _tagsInput.split(" "); // array
 
-        let newMessage = createMessage(_author, _message, ...tags);
+        let _now = new Date();
+        let newMessage = createMessage(_author, _message, _now, ...tags);
+
         messages.push(newMessage);
 
-        addMessage(_author, _message, ...tags);
+        localStorage.setItem("messages", JSON.stringify(messages));
+
+        renderMessages(messages);
 
         messageForm.reset();
       });
@@ -146,12 +175,8 @@
           return spamTagsCount == 0;
         });
 
-        messagesDiv.innerHTML = "";
-
-        messages.map((item) => {
-          let { author, message: __message, tags } = item;
-          addMessage(author, __message, tags);
-        });
+        localStorage.setItem("messages", JSON.stringify(messages));
+        renderMessages(messages);
       });
       //
     </script>
